<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" 
        android:id="@+id/linearLayout1">
    <Button
        android:id="@+id/atividade1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atividade1" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" 
        android:layout_below="@+id/linearLayout1">
    <Button
        android:id="@+id/button_ir_para_activity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1_ir_para_activity2" />
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/linearLayout3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="horizontal" 
	    android:layout_below="@+id/linearLayout2">

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="match_parent"
	    android:layout_height="338dp"
	    android:gravity="center"
	        android:text="@string/text_first" />
	</LinearLayout>

</RelativeLayout>